Format code via Spotless
Additionally, add a CI job that checks whether the code is formatted
properly.

Co-authored-by: Stefan Walter <stefan.walter@iml.fraunhofer.de>
Merged-by: Stefan Walter <stefan.walter@iml.fraunhofer.de>